# cberl

./: LICENSE.md  README.md
c_src/: CMakeLists.txt
c_src/benchmark/: benchmark.cc  http_stress.cc
c_src/cmake/: FindFolly.cmake
c_src/src/: CMakeLists.txt  asio-plugin.cc  asio-plugin.h  asio_io_opts.h  cberl_nif.cc  client.cc  client.h  connection.cc  connection.h  promiseProxy.h  responsePlaceholder.h  types.h
c_src/src/requests/: connectRequest.cc  connectRequest.h
c_src/src/responses/: arithmeticResponse.cc  arithmeticResponse.h  connectResponse.cc  connectResponse.h  durabilityResponse.cc  durabilityResponse.h  getResponse.cc  getResponse.h  httpResponse.cc  httpResponse.h  multiResponse.h  removeResponse.cc  removeResponse.h  response.cc  response.h  storeResponse.cc  storeResponse.h
src/: cberl.erl
test/: cberl_test_SUITE.erl
